# WebTestPilot

./: .gitignore  EXTENSION.md  README.md  browser.sh  package.json  setup.sh
baselines/: README.md  base_runner.py  const.py  evaluate.py  pyproject.toml  utils.py
baselines/lavague/: pyproject.toml  runner.py
baselines/naviqate/: browser.sh  pyproject.toml  runner.py
baselines/naviqate/evaluation/: eval_new.py  evaluate.py  evaluate.sh  helper.py
baselines/naviqate/method/crawler/: crawler.py
baselines/naviqate/method/llm/: llm_prompting.py
baselines/pinata/: .env.example  pyproject.toml  run.py  runner.py
baselines/pinata/js/: mark_page.js
baselines/webtestpilot/: pyproject.toml  runner.py
experiments/rq3_4/: main.py  pyproject.toml  run.py  run.sh  runner.py
experiments/rq3_4/configs/: gemma.yaml  glm.yaml  internvl.yaml  qwen.yaml
experiments/rq3_4/configs/gemma/: add_noise.yaml  default.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/configs/glm/: add_noise.yaml  default.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/configs/gpt/: add_noise.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/configs/qwen/: add_noise.yaml  default.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/configs/qwen-32b/: add_noise.yaml  default.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/configs/qwen-3b/: add_noise.yaml  default.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/configs/qwen-72b/: add_noise.yaml  default.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/configs/qwen-7b/: add_noise.yaml  default.yaml  dropout.yaml  restyle.yaml  summarize.yaml
experiments/rq3_4/input/: dropout.py  test.py
experiments/rq3_4/input/transform/: transform.py
experiments/rq3_4/results/gpt-4.1/: webtestpilot-gpt-add-noise.json  webtestpilot-gpt-dropout.json  webtestpilot-gpt-restyle.json  webtestpilot-gpt-summarize.json
experiments/rq3_4/results/qwen-32b/: webtestpilot-qwen-32b-add-noise.json  webtestpilot-qwen-32b-default.json  webtestpilot-qwen-32b-dropout.json  webtestpilot-qwen-32b-restyle.json  webtestpilot-qwen-32b-summarize.json
experiments/rq3_4/results/qwen-3b/: webtestpilot-qwen-3b-add-noise.json  webtestpilot-qwen-3b-default.json  webtestpilot-qwen-3b-dropout.json  webtestpilot-qwen-3b-restyle.json  webtestpilot-qwen-3b-summarize.json
experiments/rq3_4/results/qwen-72b/: webtestpilot-qwen-72b-add-noise.json  webtestpilot-qwen-72b-default.json  webtestpilot-qwen-72b-dropout.json  webtestpilot-qwen-72b-restyle.json  webtestpilot-qwen-72b-summarize.json
experiments/rq3_4/results/qwen-7b/: webtestpilot-qwen-7b-add-noise.json  webtestpilot-qwen-7b-default.json  webtestpilot-qwen-7b-dropout.json  webtestpilot-qwen-7b-restyle.json  webtestpilot-qwen-7b-summarize.json
testcases/: .gitignore  MAPPING.md  README.md  conftest.py  pyproject.toml  pytest_xpath_plugin.py  tracing_api.py
testcases/baselines/: base_runner.py  const.py  evaluate.py  utils.py
testcases/baselines/lavague/: evaluate.py  lavague_runner.py  utils.py
testcases/baselines/naviqate/: naviqate_runner.py
testcases/baselines/pinata/: pinata_runner.py
testcases/baselines/webtestpilot/: webtestpilot_runner.py
testcases/bookstack/: README.md  book.py  chapter.py  conftest.py  move.py  page.py  page_template.py  permissions.py  search.py  shelf.py  sort.py  utilities.py
testcases/bookstack/app/: .env.example  docker-compose.yaml
testcases/eval_data/results/lavague/: bookstack.json
testcases/eval_data/test_cases/bookstack/: tc_01_login.json  tc_02_book_create.json  tc_03_book_read.json  tc_04_book_update.json  tc_05_book_delete.json  (+23 more)
testcases/indico/: conference.py  conftest.py  lecture.py  meeting.py  utilities.py
testcases/invoiceninja/: client.py  conftest.py  credit.py  expense.py  invoice.py  payment.py  product.py  seed.py  utilities.py
testcases/invoiceninja/app/: .env.example
testcases/lavague/: evaluate.py
testcases/prestashop/: conftest.py  seed.py  test_attribute-feature.py  test_brand.py  test_buyer.py  test_category.py  test_customer.py  test_product.py  test_supplier.py  utilities.py
testcases/prestashop/app/: docker-compose.yaml
testcases/prestashop/test_data/: attribute-feature_data.json  brand_data.json  buyer_data.json  category_data.json  customer_data.json  product_data.json  supplier_data.json
testcases/tracing/: __init__.py
testcases/tracing/core/: __init__.py  constants.py  registry.py  tracer.py  utils.py
testcases/tracing/playwright/: __init__.py  proxy.py  traced_expect.py  traced_page.py
webtestpilot/: .gitignore  CHANGELOG.md  INTEGRATION.md  QUICKSTART.md  README.md  code_parsing.ipynb  main.py  package.json  pyproject.toml  segment.py  test.py
webtestpilot/baml_src/: actor.baml  clients.baml  executor.baml  generators.baml  parser.baml  scenario.baml
webtestpilot/baml_src/executor/: action.baml  assertion.baml  methods.baml  postcondition.baml  reidentification.baml
webtestpilot/baml_src/parser/: parser.baml
webtestpilot/masking/: maskDynamicContent.js  maskText.js  unmaskDynamicContent.js  unmaskText.js
webtestpilot/page_model/: abstract_tree.py  accessibility_tree.py  tree_distance.py
webtestpilot/src/: cli.py  config.py  config.yaml  extension.ts  fileSystemService.ts  importPanel.ts  main.py  parallelTestRunner.ts  parse_pydantic_schema.py  testEditorPanel.ts  testRunnerPanel.ts  treeDataProvider.ts  workspaceRootService.ts
webtestpilot/src/baml_client/: async_client.py  inlinedbaml.py  parser.py  sync_client.py
webtestpilot/src/executor/: __init__.py  automator.py  executor.py  schema.py  utils.py
webtestpilot/src/parser/: __init__.py
webtestpilot/src/views/: import.html  live-browser.html  parallel-test-runner.html  test-editor.html
webtestpilot/tests/: README.md  conftest.py  test_execute_assertion.py
webtestpilot/webtestpilot/: pyproject.toml
webtestpilot/webtestpilot/baml_src/: clients.baml
webtestpilot/webtestpilot/src/: cli.py  config.py  config.yaml  main.py
(+1449 files in other folders)
