[project]
name = "webtestpilot-baselines"
version = "0.1.0"
description = "Baselines to run for webtestpilot"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "playwright>=1.53.0",
    "pytest>=8.4.1",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.6.1",
    "playwright-dompath>=0.0.1",
    "pytest-dependency>=0.6.0",
    "dotenv>=0.9.9",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
    "nest-asyncio==1.6.0",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
pinata = [
    "anthropic>=0.45.2",
    "asyncio>=3.4.3",
    "google-genai>=1.0.0",
    "ipykernel>=6.29.5",
    "mistralai>=1.5.0",
    "openai>=1.59.8",
    "pillow>=11.1.0",
    "playwright>=1.49.1",
    "playwright-dompath>=0.0.1",
    "pydantic>=2.10.5",
    "pytest-playwright>=0.6.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

webtestpilot = [
    "anthropic>=0.61.0",
    "baml-py==0.204.0",
    "google-genai>=1.29.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "openai>=1.95.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "playwright>=1.53.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "zss>=1.2.0",
]

lavague = ["lavague @ https://github.com/ABCbum/LaVague.git"]

naviqate = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "openai>=1.99.9",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "playwright-dompath>=0.0.1",
    "pytest>=8.4.1",
    "pytest-dependency>=0.6.0",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "typer>=0.16.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
