[project]
name = "testcases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.53.0",
    "pytest>=8.4.1",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.6.1",
    "playwright-dompath>=0.0.1",
    "pytest-dependency>=0.6.0",
    "dotenv>=0.9.9",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
    "nest-asyncio==1.6.0"
]

[tool.setuptools]
py-modules = []