[project]
name = "lavague"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "playwright>=1.54.0",
    "playwright-dompath>=0.0.1",
    "pytest>=8.4.1",
    "pytest-dependency>=0.6.0",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.8.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "lavague",
    "lavague-drivers-playwright>=0.2.11",
    "ruff>=0.12.9",
]

[tool.uv.sources]
lavague = { workspace = true }
