[project]
name = "naviqate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "openai>=1.99.9",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "playwright-dompath>=0.0.1",
    "pytest>=8.4.1",
    "pytest-dependency>=0.6.0",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "typer>=0.16.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
