[project]
name = "pinata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.2",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "google-genai>=1.0.0",
    "ipykernel>=6.29.5",
    "mistralai>=1.5.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.59.8",
    "pillow>=11.1.0",
    "playwright>=1.49.1",
    "playwright-dompath>=0.0.1",
    "pydantic>=2.10.5",
    "pytest>=8.4.1",
    "pytest-dependency>=0.6.0",
    "pytest-playwright>=0.6.2",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
