[project]
name = "rq3-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.205.0",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "ruamel-yaml>=0.18.14",
    "typer>=0.16.0",
    "typo>=0.1.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
ignore = ["E402"]
